[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/bird.gd" type="Script" id=1]
[ext_resource path="res://sprites/burd.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]

resource_name = "flap"
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("../bird_sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 2, 2, 0 ]
}

[sub_resource type="Animation" id=2]

resource_name = "flying"
length = 1.5
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../bird_sheet:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 12 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../bird_sheet:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0, 2, 2 ]
}

[sub_resource type="Animation" id=3]

resource_name = "idle"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../bird_sheet:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../bird_sheet:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="CircleShape2D" id=4]

custom_solver_bias = 0.0
radius = 15.0

[node name="bird_rigid" type="RigidBody2D"]

position = Vector2( 72, 200 )
input_pickable = false
collision_layer = 1
collision_mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 10.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 1
contact_monitor = true
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="bird_sheet" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
hframes = 3
_sections_unfolded = [ "Animation", "Transform" ]

[node name="bird_anim_player" type="AnimationPlayer" parent="." index="1"]

root_node = NodePath("")
autoplay = "idle"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 3.0
anims/flap = SubResource( 1 )
anims/flying = SubResource( 2 )
anims/idle = SubResource( 3 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="bird_collider" type="CollisionShape2D" parent="." index="2"]

shape = SubResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_bird_rigid_body_entered"]


